log
Thu 21 Mar 2024 08:23:49 PM UTC: 
 tests:  0|5
total_score: 0/70
8df703c
Thu 21 Mar 2024 08:34:17 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:10: error: ‘i’ undeclared (first use in this function)
   47 |     for (i = 0; i <= 10; i++){
      |          ^
exercises.c:47:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f88bfe2
